# Tyne

./: CMakeLists.txt  README.md  build_toolchain.py  config.toml  tyne_v0.1.0_syntax_specification.md
.github/workflows/: cross_arch.yml
examples/: demo_hello.cpp  hello_config.toml  hello_world.tyne  hello_world_config.toml  sample.tyne
lib/: README.md  collections.tyne  crypto.tyne  filesystem.tyne  hash.tyne  io.tyne  list.tyne  math.tyne  networking.tyne  stdlib.tyne  string.tyne  time.tyne
src/: ir_builder.hpp  lexer.hpp  optimizer.hpp  parser.hpp  runtime.cpp  son_ir.hpp  tyne.cpp
